objects/AuxiliaryObject__c.object
<CustomObject>
    <description>This object is used as a helper to create lookup fields to various objects so that they may be used in e.g. AJAX lookups.</description>
    <fields>
        <fullName>Continuous_Integration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Continuous Integration</label>
        <referenceTo>Continuous_Integration__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployment_Flow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment Flow</label>
        <referenceTo>Deployment_Flow__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>Deployment__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Git_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Git Snapshot</label>
        <referenceTo>Git_Backup__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Git_Repository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Git Repository</label>
        <referenceTo>Git_Repository__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Credential</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Difference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Difference</label>
        <referenceTo>OrgDiff__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selenium_Test_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selenium Test Group</label>
        <referenceTo>Selenium_Test_Group__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selenium_Test_Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selenium Test Run</label>
        <referenceTo>Selenium_Test_Run__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Snapshot_Difference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Snapshot Difference</label>
        <referenceTo>Snapshot_Difference__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AuxiliaryObject</label>
    <nameField>
        <label>AuxiliaryObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AuxiliaryObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>